--- a/src/components/ReactOTP/style.css
+++ b/src/components/ReactOTP/style.css
@@ -1,23 +1,56 @@
-.OtpInput{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-wrap: wrap;
+.OtpInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
 ._input-box {
-  width: 40px;
+  /* width: 40px;
   height: 40px;
   margin-right: 4px;
   text-align: center;
-  border: 1px solid gray;
+  border: 1px solid gray; */
+
+  width: 50px;
+  height: 50px;
+  font-size: 24px;
+  text-align: center;
+  border-radius: 6px;
+  /* border: 1px solid #ccc; */
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
+  outline: none;
+  background-color: #fff;
+  border: none;
 
   /* Hide number input arrows */
   -moz-appearance: textfield;
 }
+
 ._input-box::-webkit-inner-spin-button,
 ._input-box::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+
+
+/* resend Text */
+.resendComponent {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.resend-text {
+  font-size: 13px;
+  color: #333333;
+}
+
+.resend-button {
+  color: #1a73e8;
+  cursor: pointer;
 }
