--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 400px;
+  width: 350px;
   margin: 60px auto;
   padding: 20px;
   background-color: #ffffff;
@@ -127,4 +127,11 @@
 
 .submit:disabled {
   opacity: 0.5;
+}
+
+/* Mobile Responsive Styles */
+@media screen and (max-width: 480px) {
+ .sidebar{
+  display: none;
+ }
 }
