--- a/src/components/ReactOTP/style.css
+++ b/src/components/ReactOTP/style.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 10px;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 ._input-box {
@@ -13,9 +14,9 @@
   text-align: center;
   border: 1px solid gray; */
 
-  width: 50px;
-  height: 50px;
-  font-size: 24px;
+  width: 45px;
+  height: 45px;
+  font-size: 19px;
   text-align: center;
   border-radius: 6px;
   /* border: 1px solid #ccc; */
@@ -28,8 +29,9 @@
   /* Hide number input arrows */
   -moz-appearance: textfield;
 }
-._input-box:focus{
- box-shadow: 0 0 1px 2px purple;
+
+._input-box:focus {
+  box-shadow: 0 0 1px 2px purple;
 }
 
 ._input-box::-webkit-inner-spin-button,
