add default class to renderTimer component

--- a/src/components/ReactOTP/style.css
+++ b/src/components/ReactOTP/style.css
@@ -88,3 +88,10 @@
   text-decoration: underline;
   text-underline-offset: 2px;
 }
+
+.renderTimeDefaultClass{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
