--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 350px;
+  max-width: 410px;
   margin: 60px auto;
   padding: 20px;
   background-color: #ffffff;
@@ -80,6 +80,7 @@
   font-family: 'Roboto', sans-serif;
   text-align: center;
   gap: 10px;
+  min-width: 320px;
 }
 
 .otp-form h2 {
